--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
-  "svelte": "src/index.js",
+  "svelte": "src/index.ts",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -15,9 +15,13 @@
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-typescript": "^8.1.0",
+    "@tsconfig/svelte": "^1.0.10",
     "rollup": "^2.35.1",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.31.0"
+    "svelte": "^3.31.0",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.3"
   }
 }
