--- a/package.json
+++ b/package.json
@@ -8,20 +8,30 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/svelte": "^6.1.11",
     "@tsconfig/svelte": "^1.0.10",
+    "babel-loader": "^8.2.2",
     "rollup": "^2.35.1",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.31.0",
+    "svelte-loader": "^2.13.6",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
-  }
+  },
+  "dependencies": {}
 }
