--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@storybook/svelte": "^6.1.11",
     "@tsconfig/svelte": "^1.0.10",
     "babel-loader": "^8.2.2",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^1.4.2",
     "rollup": "^2.35.1",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
