--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.31.0",
     "svelte-loader": "^2.13.6",
+    "tailwindcss": "^1.9.6",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3"
   },
